src/test/ui/const-generics/issue-46511.stderr
error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/issue-46511.rs:5:35
   |
LL |     _a: [u8; std::mem::size_of::<&'a mut u8>()]
   |                                   ^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = help: add `#![feature(generic_const_exprs)]` to the crate attributes to enable

error[E0392]: parameter `'a` is never used
  --> $DIR/issue-46511.rs:3:12
   |
LL | struct Foo<'a>
   |            ^^ unused parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0392, E0658.
For more information about an error, try `rustc --explain E0392`.
